# clipforge

./: CMakeLists.txt  readme.md
include/: cli_parser.h  cxxopts.hpp  main.cpp  processor.h
src/: cli_parser.h  main.cpp  processor.h
